# ui-automation

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  config.yaml.example  docker-compose.yml  go.mod  go.sum  test_integration.sh
agent/: README.md  agent_runner.py  config.go  documenter.go  explorer.go  mcp_bridge.go  pipeline.go  planner.go  pyproject.toml  types.go  worker.go
apitoken/: apitoken.go  apitoken_test.go  common_test.go  mysql.go  mysql_test.go  store.go
database/: database.go  migrations.go
docs/: IMPLEMENTATION_SUMMARY.md  INTRO_PROJECT_IMPLEMENTATION_SUMMARY.md  S3_IMPLEMENTATION_SUMMARY.md  SECURITY.md
endpoint/: common_test.go  endpoint.go  mysql.go  mysql_test.go  setters.go  store.go
frontend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  elm.json  index.html  nginx.conf
integration/: crypto.go  crypto_test.go  model.go  mysql.go  setters.go  store.go
integration_tests/: conftest.py  pyproject.toml
integration_tests/client/: __init__.py  api_client.py  models.py
integration_tests/tests/: test_api_tokens.py  test_assets.py  test_auth.py  test_endpoints.py  test_full_flow.py  test_integrations.py  test_jobs.py  test_procedures.py  test_projects.py  test_runs.py
issuetracker/: factory.go  issuetracker.go
job/: common_test.go  job.go  mysql.go  mysql_test.go  setters.go  store.go
logger/: logger.go  logrus.go  test.go
playwright-mcp/: Dockerfile
project/: common_test.go  mysql.go  mysql_test.go  project.go  project_test.go  setters.go  store.go
scriptgen/: bedrock.go  generator.go  model.go  (+7 more)
(+124 files in other folders)
